--- a/locale/zh/LC_MESSAGES/django.po
+++ b/locale/zh/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-08-06 17:55+0800\n"
+"POT-Creation-Date: 2024-08-07 19:25+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -27,7 +27,7 @@ msgstr "任务监控系统不可用，请联系管理员"
 msgid "Unauthorized authentication"
 msgstr "未授权"
 
-#: common/core/auth.py:36
+#: common/core/auth.py:36 system/views/password.py:124
 msgid "Token is invalid or expired"
 msgstr "令牌无效或过期"
 
@@ -103,6 +103,7 @@ msgid "Sorting saved successfully"
 msgstr "排序保存成功"
 
 #: common/core/modelset.py:132 system/utils/modelset.py:53
+#: system/views/password.py:50 system/views/password.py:88
 msgid "Operation failed. Abnormal data"
 msgstr "操作失败，数据异常"
 
@@ -176,6 +177,18 @@ msgstr "短信服务商不支持：{}"
 msgid "SMS verification code signature or template invalid"
 msgstr "短信验证码签名或模板无效"
 
+#: common/sdk/sms/exceptions.py:14
+msgid "The verification code has expired. Please resend it"
+msgstr "验证码已过期，请重新发送"
+
+#: common/sdk/sms/exceptions.py:19
+msgid "The verification code is incorrect"
+msgstr "验证码错误"
+
+#: common/sdk/sms/exceptions.py:24 common/sdk/sms/exceptions.py:32
+msgid "Please wait {} seconds before sending"
+msgstr "请在 {} 秒后发送"
+
 #: common/tasks.py:19
 msgid "Send email"
 msgstr "发件邮件"
@@ -218,7 +231,11 @@ msgstr "用户名或密码错误"
 msgid "Please enter your account information to log in"
 msgstr "请输入用户信息进行登录"
 
-#: settings/models.py:16 settings/serializers/sms.py:59 system/models.py:177
+#: common/utils/verify_code.py:22
+msgid "Send SMS code"
+msgstr "发送短信验证码"
+
+#: settings/models.py:16 settings/serializers/sms.py:55 system/models.py:177
 msgid "Name"
 msgstr "名称"
 
@@ -243,71 +260,71 @@ msgstr "激活状态"
 msgid "System setting"
 msgstr "系统设置"
 
-#: settings/serializers/basic.py:13
+#: settings/serializers/basic.py:14
 msgid "Site URL"
 msgstr "当前站点 URL"
 
-#: settings/serializers/basic.py:15
+#: settings/serializers/basic.py:16
 msgid ""
 "Site URL is the externally accessible address of the current product service "
 "and is usually used in links in system emails"
 msgstr "站点 URL 是当前产品服务的外部可访问地址，通常在系统邮件中的链接中使用"
 
-#: settings/serializers/email.py:13 settings/utils/serializer.py:32
-msgid "Recipient"
-msgstr "收件人"
+#: settings/serializers/email.py:12
+msgid "EMAIL"
+msgstr "邮件"
 
-#: settings/serializers/email.py:14 settings/utils/serializer.py:33
-msgid "The recipient is used for testing the email server's connectivity"
-msgstr "收件人用于测试电子邮件服务器的连通性"
+#: settings/serializers/email.py:12
+msgid "Enable Email Service (Email)"
+msgstr "启用邮件服务 (Email)"
 
-#: settings/serializers/email.py:19 settings/utils/serializer.py:16
+#: settings/serializers/email.py:14 settings/utils/serializer.py:16
 msgid "Host"
 msgstr "主机"
 
-#: settings/serializers/email.py:20 settings/utils/serializer.py:17
+#: settings/serializers/email.py:15 settings/utils/serializer.py:17
 msgid "Port"
 msgstr "端口"
 
-#: settings/serializers/email.py:22 settings/utils/serializer.py:19
+#: settings/serializers/email.py:17 settings/utils/serializer.py:19
 msgid "Account"
 msgstr "账号"
 
-#: settings/serializers/email.py:23 settings/utils/serializer.py:20
+#: settings/serializers/email.py:18 settings/utils/serializer.py:20
 msgid "The user to be used for email server authentication"
 msgstr "登录到邮件服务器的用户名。这通常是你的邮件地址"
 
-#: settings/serializers/email.py:26 settings/utils/serializer.py:23
+#: settings/serializers/email.py:21 settings/utils/serializer.py:23
 msgid "Password"
 msgstr "密码"
 
-#: settings/serializers/email.py:28 settings/utils/serializer.py:25
+#: settings/serializers/email.py:23 settings/utils/serializer.py:25
 msgid ""
 "Password to use for the email server. It is used in conjunction with `User` "
 "when authenticating to the email server"
 msgstr "登录到邮件服务器的密码"
 
-#: settings/serializers/email.py:31 settings/utils/serializer.py:28
+#: settings/serializers/email.py:26 settings/utils/serializer.py:28
 msgid "Sender"
 msgstr "发件人"
 
-#: settings/serializers/email.py:32 settings/utils/serializer.py:29
+#: settings/serializers/email.py:27 settings/utils/serializer.py:29
 msgid "Sender email address (default to using the `User`)"
 msgstr "发件人电子邮件地址（默认使用“用户”）"
 
-#: settings/serializers/email.py:36 settings/utils/serializer.py:36
+#: settings/serializers/email.py:31 settings/utils/serializer.py:36
 msgid "Subject prefix"
 msgstr "主题前缀"
 
-#: settings/serializers/email.py:37 settings/utils/serializer.py:37
+#: settings/serializers/email.py:32 settings/utils/serializer.py:37
 msgid "The subject line prefix of the sent email"
 msgstr "发送邮件的主题行前缀"
 
-#: settings/serializers/email.py:40 settings/utils/serializer.py:40
+#: settings/serializers/email.py:35 settings/utils/serializer.py:40
 msgid "Use SSL"
 msgstr "使用 SSL"
 
-#: settings/serializers/email.py:42 settings/utils/serializer.py:42
+#: settings/serializers/email.py:37 settings/utils/serializer.py:42
 msgid ""
 "Whether to use an implicit TLS (secure) connection when talking to the SMTP "
 "server. In most email documentation this type of TLS connection is referred "
@@ -316,17 +333,25 @@ msgstr ""
 "与 SMTP 服务器通信时是否使用隐式 TLS（安全）连接。在大多数电子邮件文档中，这"
 "种类型的 TLS 连接称为 SSL。它通常在端口 465 上使用"
 
-#: settings/serializers/email.py:45 settings/utils/serializer.py:45
+#: settings/serializers/email.py:40 settings/utils/serializer.py:45
 msgid "Use TLS"
 msgstr "使用 TLS"
 
-#: settings/serializers/email.py:47 settings/utils/serializer.py:47
+#: settings/serializers/email.py:42 settings/utils/serializer.py:47
 msgid ""
 "Whether to use a TLS (secure) connection when talking to the SMTP server. "
 "This is used for explicit TLS connections, generally on port 587"
 msgstr ""
 "与 SMTP 服务器通信时是否使用 TLS（安全）连接。这用于显式 TLS 连接，通常在端"
 "口 587 上"
+
+#: settings/serializers/email.py:46 settings/utils/serializer.py:32
+msgid "Recipient"
+msgstr "收件人"
+
+#: settings/serializers/email.py:47 settings/utils/serializer.py:33
+msgid "The recipient is used for testing the email server's connectivity"
+msgstr "收件人用于测试电子邮件服务器的连通性"
 
 #: settings/serializers/security.py:17
 msgid "Minimum length (User)"
@@ -336,15 +361,15 @@ msgstr "密码最小长度"
 msgid "Minimum length (Admin)"
 msgstr "管理员密码最小长度"
 
-#: settings/serializers/security.py:24
+#: settings/serializers/security.py:24 settings/serializers/verify.py:31
 msgid "Uppercase"
 msgstr "大写字母"
 
-#: settings/serializers/security.py:27
+#: settings/serializers/security.py:27 settings/serializers/verify.py:35
 msgid "Lowercase"
 msgstr "小写字母"
 
-#: settings/serializers/security.py:30
+#: settings/serializers/security.py:30 settings/serializers/verify.py:39
 msgid "Digits"
 msgstr "数字"
 
@@ -415,6 +440,7 @@ msgid "Login encrypted"
 msgstr "登录信息加密"
 
 #: settings/serializers/security.py:104 settings/serializers/security.py:125
+#: settings/serializers/security.py:146
 msgid "Enable encryption to prevent information leakage"
 msgstr "开启敏感信息加密，防止数据泄露"
 
@@ -423,6 +449,7 @@ msgid "Login temp token"
 msgstr "登录临时令牌"
 
 #: settings/serializers/security.py:109 settings/serializers/security.py:130
+#: settings/serializers/security.py:151
 msgid "Enable temporary tokens to prevent attacks"
 msgstr "开启临时令牌，防止被攻击"
 
@@ -432,7 +459,7 @@ msgstr "允许注册"
 
 #: settings/serializers/security.py:116
 msgid "Enable register for user"
-msgstr "运行用户进行注册"
+msgstr "允许用户进行注册"
 
 #: settings/serializers/security.py:119
 msgid "Register captcha"
@@ -450,7 +477,47 @@ msgstr "注册信息加密"
 msgid "Register temp token"
 msgstr "注册临时令牌"
 
-#: settings/serializers/sms.py:18 settings/serializers/sms.py:31
+#: settings/serializers/security.py:136
+msgid "Reset password enable"
+msgstr "允许重置密码"
+
+#: settings/serializers/security.py:137
+msgid "Enable reset password for user"
+msgstr "允许用户重置密码"
+
+#: settings/serializers/security.py:140
+msgid "Reset password captcha"
+msgstr "重置密码验证码"
+
+#: settings/serializers/security.py:141
+msgid "Enable captcha to prevent robot reset password"
+msgstr "开启验证码，防止机器人重置密码"
+
+#: settings/serializers/security.py:145
+msgid "Reset password encrypted"
+msgstr "重置密码信息加密"
+
+#: settings/serializers/security.py:150
+msgid "Reset password temp token"
+msgstr "重置密码临时令牌"
+
+#: settings/serializers/security.py:155
+msgid "Reset password by email"
+msgstr "通过邮件重置密码"
+
+#: settings/serializers/security.py:156
+msgid "Enable send email verify code to user"
+msgstr "允许用户通过发送邮件验证码"
+
+#: settings/serializers/security.py:160
+msgid "Reset password by sms"
+msgstr "通过短信重置密码"
+
+#: settings/serializers/security.py:161
+msgid "Enable send sms verify code to user"
+msgstr "允许用户通过发送短信验证码"
+
+#: settings/serializers/sms.py:18 settings/serializers/sms.py:27
 msgid "SMS"
 msgstr "短信"
 
@@ -466,37 +533,56 @@ msgstr "提供商"
 msgid "Short Message Service (SMS) provider or protocol"
 msgstr "短信服务 (SMS) 提供商或协议"
 
-#: settings/serializers/sms.py:25
-msgid "Code length"
-msgstr "验证码长度"
-
-#: settings/serializers/sms.py:26
-msgid "Length of the sent verification code"
-msgstr "发送验证码的长度"
-
-#: settings/serializers/sms.py:35
+#: settings/serializers/sms.py:31
 msgid "Phone"
 msgstr "手机"
 
-#: settings/serializers/sms.py:54
+#: settings/serializers/sms.py:31
+msgid "The phone is used for testing the SMS server's connectivity"
+msgstr "手机用于测试短信服务器的连通性"
+
+#: settings/serializers/sms.py:50
 msgid "Signature"
 msgstr "签名"
 
-#: settings/serializers/sms.py:55
+#: settings/serializers/sms.py:51
 msgid "Template code"
 msgstr "模板"
 
-#: settings/serializers/sms.py:60
+#: settings/serializers/sms.py:56
 msgid "Label"
 msgstr "标签"
 
-#: settings/views.py:91 settings/views/email.py:45
+#: settings/serializers/verify.py:15
+msgid "Verify code TTL (second)"
+msgstr "验证码有效时间 (秒)"
+
+#: settings/serializers/verify.py:16
+msgid "Verify code expiration time"
+msgstr "验证码过期时间"
+
+#: settings/serializers/verify.py:21
+msgid "Verify code rate (second)"
+msgstr "验证码速率限制 (秒)"
+
+#: settings/serializers/verify.py:22
+msgid "Verify code send rate limit"
+msgstr "验证码发送速率限制"
+
+#: settings/serializers/verify.py:26
+msgid "Code length"
+msgstr "验证码长度"
+
+#: settings/serializers/verify.py:27
+msgid "Length of the sent verification code"
+msgstr "发送验证码的长度"
+
+#: settings/views.py:91 settings/views/email.py:40
 #: system/views/admin/settings.py:37
 msgid "Test smtp setting"
 msgstr "测试 smtp 设置"
 
-#: settings/views/email.py:70 system/views/admin/settings.py:12
-#: system/views/auth.py:304
+#: settings/views/email.py:65 system/views/admin/settings.py:12
 msgid "Test mail sent to {}, please check"
 msgstr "邮件已经发送{}, 请检查"
 
@@ -1101,15 +1187,19 @@ msgstr "验证码"
 #: system/templates/msg_reset_password_code.html:15
 msgid ""
 "Copy the verification code to the Reset Password page to reset the password."
-msgstr ""
+msgstr "将验证码复制到重置密码页面，重置密码。"
 
 #: system/templates/msg_reset_password_code.html:18
-msgid "The validity period of the verification code is five minute"
-msgstr ""
+msgid "The validity period of the verification code is"
+msgstr "验证码有效期为"
+
+#: system/templates/msg_reset_password_code.html:18
+msgid "seconds"
+msgstr "秒"
 
 #: system/templates/msg_reset_password_code.html:21
 msgid "If you have any questions, you can contact the administrator"
-msgstr ""
+msgstr "如果有疑问或需求，请联系系统管理员"
 
 #: system/utils/serializer.py:61 system/utils/serializer.py:62
 msgid "Fields"
@@ -1136,7 +1226,8 @@ msgid "Login blocked"
 msgstr "登录被锁定"
 
 #: system/utils/serializer.py:218 system/views/admin/user.py:74
-#: system/views/auth.py:129 system/views/user/userinfo.py:63
+#: system/views/auth.py:81 system/views/password.py:126
+#: system/views/user/userinfo.py:63
 msgid "Password does not match security rules"
 msgstr "密码不满足安全规则"
 
@@ -1196,43 +1287,44 @@ msgstr "全部表"
 msgid "All fields"
 msgstr "全部字段"
 
-#: system/views/admin/user.py:49
-msgid "The super administrator disallows deletion"
-msgstr "超级管理员禁止删除"
-
-#: system/views/auth.py:115
-msgid "Registration forbidden"
-msgstr "禁止注册"
-
-#: system/views/auth.py:123 system/views/auth.py:195
-msgid "Temporary Token validation failed. Please try again"
-msgstr "临时Token校验失败，请稍后重试"
-
-#: system/views/auth.py:125 system/views/auth.py:197
+#: system/utils/view.py:41
 msgid "Captcha validation failed. Please try again"
 msgstr "验证码校验失败，请稍后重试"
 
-#: system/views/auth.py:131
-msgid "The username already exists, please try another one"
-msgstr "用户名已经存在，请换个试试"
+#: system/utils/view.py:47
+msgid "Temporary Token validation failed. Please try again"
+msgstr "临时Token校验失败，请稍后重试"
 
-#: system/views/auth.py:175
+#: system/utils/view.py:72
 msgid ""
 "The address has been locked (please contact admin to unlock it or try again "
 "after {} minutes)"
 msgstr "IP 已被锁定 (请联系管理员解锁或 {} 分钟后重试)"
 
-#: system/views/auth.py:180 system/views/auth.py:226
+#: system/utils/view.py:76 system/views/auth.py:158
+#: system/views/password.py:117
 msgid ""
 "The account has been locked (please contact admin to unlock it or try again "
 "after {} minutes)"
 msgstr "账号已被锁定 (请联系管理员解锁或{}分钟后重试)"
 
-#: system/views/auth.py:186
+#: system/views/admin/user.py:49
+msgid "The super administrator disallows deletion"
+msgstr "超级管理员禁止删除"
+
+#: system/views/auth.py:73
+msgid "Registration forbidden"
+msgstr "禁止注册"
+
+#: system/views/auth.py:83
+msgid "The username already exists, please try another one"
+msgstr "用户名已经存在，请换个试试"
+
+#: system/views/auth.py:127
 msgid "Login forbidden"
 msgstr "禁止登录"
 
-#: system/views/auth.py:220
+#: system/views/auth.py:152
 #, python-brace-format
 msgid ""
 "The username or password you entered is incorrect, please enter it again. "
@@ -1242,39 +1334,38 @@ msgstr ""
 "您输入的用户名或密码不正确，请重新输入。 您还可以尝试 {times_try} 次 (账号将"
 "被临时 锁定 {block_time} 分钟)"
 
-#: system/views/auth.py:288
+#: system/views/password.py:32
+msgid "Forgot password"
+msgstr "忘记密码"
+
+#: system/views/password.py:45
+msgid "Reset password forbidden"
+msgstr "禁止重置密码"
+
+#: system/views/password.py:61
+msgid "Phone does not exist"
+msgstr "手机号不存在"
+
+#: system/views/password.py:64
 msgid "Email does not exist"
+msgstr "邮件不存在"
+
+#: system/views/password.py:77
+msgid "The verification code has been sent"
+msgstr "验证码已发送"
+
+#: system/views/password.py:112
+#, fuzzy, python-brace-format
+msgid ""
+"{error} please enter it again. You can also try {times_try} times (The "
+"account will be temporarily locked for {block_time} minutes)"
 msgstr ""
+"{error} 请重新输入。 您还可以尝试 {times_try} 次 (账号将被临时 锁定 "
+"{block_time} 分钟)"
 
-#: system/views/auth.py:290
-msgid "Reset password"
-msgstr "重置密码"
-
-#: system/views/reset.py:26 system/views/reset.py:37
-#, fuzzy
-#| msgid "Token is invalid or expired"
-msgid "Token invalid or expired"
-msgstr "令牌无效或过期"
-
-#: system/views/reset.py:42
-msgid "User auth from {}, go there change password"
-msgstr ""
-
-#: system/views/reset.py:49
-msgid "* Your password does not meet the requirements"
-msgstr "* 您的密码不符合要求"
-
-#: system/views/reset.py:55
-msgid "* The new password cannot be the last {} passwords"
-msgstr ""
-
-#: system/views/reset.py:71
-msgid "Reset password success"
-msgstr ""
-
-#: system/views/reset.py:72
+#: system/views/password.py:131
 msgid "Reset password success, return to login page"
-msgstr ""
+msgstr "重置密码成功，返回到登录页面"
 
 #: system/views/upload.py:53
 msgid "upload file size cannot exceed {}"
